--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,67 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Andada+Pro:wght@400;500;600;700;800&display=swap");
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Tinos:ital@1&display=swap');
+/* font-family: 'Poppins', sans-serif;
+font-family: 'Tinos', serif; */
+
 .navbar a.active {
   color: rgb(215, 216, 230);
 }
 .navbar  a {
   background-color: transparent;
 }
+
+/* about */
+
+
+/* =========== base style ========= */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+section,
+footer {
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 2rem;
+  line-height: 50px;
+  font-family: "Poppins", sans-serif;
+  color: #0a2b1e;
+  font-weight: 600;
+}
+
+p {
+  /* color: #596b65; */
+  color: #3c3f3e;
+  font-size: 1rem;
+  line-height: 35px;
+  font-family: "Tinos";
+  font-weight: 600;
+}
+
+button.btn {
+  background: #17bf9e;
+  color: #fff;
+  padding: 7px 25px;
+  border-radius: 50px;
+}
+
+i {
+  color: #17bf9e;
+}
+
