--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ font-family: 'Tinos', serif; */
 
 /* =========== base style ========= */
 
-* {
+*, :root {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
